# freeprise-matchmaker

./: .env  .gitignore  Dockerfile  README.md  api_text.ipynb  docker-compose.yml  freelancer_unique_search_terms.txt  pyproject.toml
.github/workflows/: freeprise_ci.yml
api_calls/: arbeitnow_api_call.py  clean_themuseapi_data.py  extract_from_profiles.py  extract_from_profiles_old.py  freelancer_api_call.py  inspect_data.py  themuse_api_call.py
dags/: raw_data_processing_pipeline.py
data/: cleaned_themuse_jobs_part_1.csv  themuse_companies_part_1.csv  themuse_jobs_part_1.csv
data/cleaned/: certifications_data.csv  cleaned_all_companies.csv  cleaned_themuse_companies_part_1.csv  education_data.csv  experiences_data.csv  profiles.csv  projects_data.csv  skills_data.csv
data/source/: themuse_companies_part_1.csv
data_utils/: upload.py
dbt_freeprise/: .user.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt_freeprise/macros/: get_schema.sql
dbt_freeprise/models/bronze/: bronze.yml
dbt_freeprise/models/gold/: gold.yml  gold_certificationDetails_Sat.sql  gold_certificationHub.sql  gold_companyDetails_Sat.sql  gold_companyHub.sql  gold_educationDetails_Sat.sql  gold_educationHub.sql  gold_jobCompany_Link.sql  (+25 more)
linkedin_api/: client.py  linkedin.py  linkedin_api_call.py  linkedin_cookies.json
logs/scheduler/: latest
raw_data_processing/: data_processing_functions.py  extract_from_raw_data.py  load_to_bucket.py  profileJob_matching.py
raw_processing/: data_processing_functions.py  extract_from_raw_profiles.py
scripts/: entrypoint.sh
(+12 files in other folders)
