[tool.poetry]
name = "freeprise-matchmaker"
version = "0.1.0"
description = ""
authors = ["BOUSAROUT <mohamed.bousarout@gmail.com>"]
readme = "README.md"
packages = [
    { include = "data_utils" }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
pandas = "1.3.5"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
bs4 = "^0.0.2"
pyspark = "^3.5.1"
apache-airflow = "^2.9.3"
psycopg2-binary = "2.9.9"
docutils = "0.17"
freelancersdk = "^0.1.20"
pandera = "^0.20.3"
pyarrow = "^17.0.0"
utils = "^1.0.2"
google-cloud-storage = "^2.18.0"
pytest = "^8.3.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
