[tool.poetry]
name = "freeprise-matchmaker"
version = "0.1.0"
description = ""
authors = ["BOUSAROUT <mohamed.bousarout@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
pandas = "1.3.5"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
bs4 = "^0.0.2"
pyspark = "^3.5.1"
apache-airflow = "^2.9.3"
psycopg2-binary = "2.9.9"
docutils = "0.17"
freelancersdk = "^0.1.20"
pytest = "^8.3.1"
google-cloud-storage = "^2.9.0"
dbt = "^1.0.0.38.6"
dbt-core = "^1.8.4"
dbt-bigquery = "^1.8.2"
npm = "^0.1.1"
levenshtein = "^0.25.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
